ve.init.mw.ViewPageTarget: Avoid content shift due to #contentSub
While #contentSub element tends to be empty, it does take up
line-height in most skins (incl. Vector). Previously, hiding this
would cause the content to be shiften upwards one line, only to
be shiften down one line again once activated.

While there are other edge cases to be straightened out, this
makes the content a lot more stationary during activation.

--- a/modules/ve-mw/init/styles/ve.init.mw.ViewPageTarget.css
+++ b/modules/ve-mw/init/styles/ve.init.mw.ViewPageTarget.css
@@ -14,13 +14,12 @@
  * Deactivated          | ve-available
  */
 
-.ve-activated #contentSub,
 .ve-activated #toc,
 /* Most of bodyContent can be hidden as VE has an equivalent of most children
    in ve-init-target (sibling of #bodyContent). However, we can't hide it
-   completely as #siteSub should remain visible (for persistence with read mode),
+   completely as subs should remain visible (for persistence with read mode),
    and ve-ui-mwTocWidget is also part of #bodyContent. */
-.ve-active #bodyContent > :not(#siteSub):not(.ve-ui-mwTocWidget),
+.ve-active #bodyContent > :not(#siteSub):not(#contentSub):not(.ve-ui-mwTocWidget),
 .ve-activated #t-print,
 .ve-activated #t-permalink,
 .ve-activated #p-coll-print_export,
@@ -30,7 +29,8 @@
 
 .ve-activating #bodyContent,
 .ve-activated #firstHeading,
-.ve-activated #siteSub {
+.ve-activated #siteSub,
+.ve-activated #contentSub {
 	opacity: 0.6;
 }
 
